--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-
-/.project
-/.settings
-/bin
-/.actionScriptProperties
-/.flexLibProperties
-/lib/minko.swf
-/lib/minko_logo.swf
+lib/minko.swf
+lib/minko_logo.swf.actionScriptProperties
+.actionScriptProperties
+.flexProperties
+.flexLibProperties
+.project
+.settings
+bin/
+bin-debug/
+bin-release/
+build/
+html-template/
