A packages.xml to add ASDoc for each package A ASDoc to a lot of classes M aerys.minko.render.shader.parts => aerys.minko.render.shader.part

--- a/build.properties
+++ b/build.properties
@@ -1,13 +1,15 @@
 # flex
-flex.home = C:\Program Files (x86)\Adobe\Adobe Flash Builder 4.6\sdks\4.6.0 (Stage3D beta 16)
+flex.home = C:/Program Files (x86)/Adobe/Adobe Flash Builder 4.6/sdks/4.6.0 (Stage3D beta 16)
 
 # application
 app.name = Minko
 app.version = 2.0b
 app.output = bin
 app.src = src
-app.swcs = libs
+app.swcs = 
 
 # documentation
 doc.title = ${app.name} - Developers Reference
 doc.output = doc
+doc.templates = doc-templates
+doc.packageDescriptionFile = packages.xml
