--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 # flex
-flex.home = C:/Program Files (x86)/Adobe/Adobe Flash Builder 4.6/sdks/4.6.0 (Stage3D beta 16)
+flex.home = /Users/fabien/Dropbox/SnowQbe/_DEV_/tools/flex/sdks/4.6.0-AIR-3.2-RELEASE
 
 # application
 app.name = Minko
