Modified build paths

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 # flex
-flex.home = C:/Program Files (x86)/Adobe/Adobe Flash Builder 4.6/sdks/4.6.0 (Stage3D beta 16)
+flex.home = D:/soft/Adobe/flex_sdk_4.6
 
 # application
 app.name = Minko
