fix ANT tasks and properties to compile SWCs with the proper filename nomenclature

--- a/build.properties
+++ b/build.properties
@@ -2,8 +2,8 @@
 flex.home = C:/Program Files (x86)/Adobe/Adobe Flash Builder 4.6/sdks/4.6.0 (Stage3D beta 16)
 
 # application
-app.name = Minko
-app.version = 2.0b
+app.name = minko
+app.version = 2.0
 app.output = bin
 app.src = src
 app.swcs = 
