fix .gitignore and add libs binaries
Former-commit-id: d5caca39b229a1ed02f816ba1ad9544585a88257

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 *.sublime-workspace
 *.sublime-project
 Makefile
-bin
-obj
-/minko.opensdf
-/minko.sdf
-/minko.sln
+framework/bin
+framework/obj
+examples/bin
+examples/obj
+*.opensdf
+*.sdf
+*.sln
+*.suo
