refactor lib dirs and add first impl. of devil plugin with a PGN parser
Former-commit-id: 7b6aa4d0328d596497e378453c1d9abf8cd71688 [formerly 21f39887a49e1b35e02bb3f06796580c7c34ee7d]
Former-commit-id: b099798def18faa4cabfdb516196be8e5f64c22f [formerly 926531c5084a82ecd81874294cfdd80e19e46a9a]
Former-commit-id: 6ed8af5dfff340a05eb2c0b25035902450bc3e82

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 *.sublime-workspace
 *.sublime-project
 Makefile
-framework/bin
-framework/obj
-examples/bin
-examples/obj
-plugins/jpeg/bin
-plugins/jpeg/obj
+bin
+obj
 *.opensdf
 *.sdf
 *.sln
