add missing files, fix linking and replace the devil plugin with a simpler png plugin
Former-commit-id: 700d8cba37947ee5d95c23d36180bc8dec2a750b
Former-commit-id: db78f0042b9e14554e64644beb10819d266db856
Former-commit-id: 5880903374e89e101ba2b4ffd8ebd3fc0788c50f

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 *.sublime-workspace
 *.sublime-project
 Makefile
-bin
-obj
+examples/bin
+examples/obj
+framework/bin
+framework/obj
+plugins/jpeg/bin
+plugins/jpeg/obj
+plugins/png/bin
+plugins/png/obj
 *.opensdf
 *.sdf
 *.sln
