Update .gitignore and remove build-dependent files.
Former-commit-id: 24ca89b620b2a83bbe8bde78a3d52e7e8655b099

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,13 @@ plugins/jpeg/bin
 plugins/jpeg/obj
 plugins/png/bin
 plugins/png/obj
+plugins/mk/bin
+plugins/mk/obj
 *.opensdf
 *.sdf
 *.sln
 *.suo
 *.vcxproj*
+*.log
+*.d
+*.o
