refactor to be able to have multiple example projects
Former-commit-id: 4b164c98442d326eea82d6377cadf44cf645ac0a [formerly 685b5d2e721aff5aad608172c8b0d27e2046e28d] [formerly 2d76d6a0b102889b06dc30fbeea0e4b5787ac7cf]
Former-commit-id: 7b9ca9e9a0d833c98197306a9e8cbef648000111 [formerly c584ccfa1c6c8c1b6bd4f3f27db312f722dc3f2f] [formerly 7613ecb3baf98f15fc0a74c9b7af5421b84f155d]
Former-commit-id: 5159a054cb2fcdff96b65472a2eb22a4981b3aed
Former-commit-id: f824d6b6c7d054962656acd178000a9c3a3fe809

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.sublime-workspace
 *.sublime-project
 Makefile
-examples/bin
-examples/obj
+examples/cube/bin
+examples/cube/obj
 framework/bin
 framework/obj
 plugins/jpeg/bin
@@ -24,3 +24,6 @@ plugins/mk/obj
 *.tlog
 *.idb
 *.pdb
+*.obj
+*.ilk
+*.lastbuildstate
